base/009-process/fuse-009-process-deployement.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  creationTimestamp: ~
  labels: 
    app: process
  name: process
spec: 
  replicas: 3
  selector: 
    matchLabels: 
      app: process
  strategy: {}
  template: 
    metadata: 
      creationTimestamp: ~
      labels: 
        app: process
    spec: 
      containers: 
        - 
          securityContext:
            privileged: false
          imagePullPolicy: IfNotPresent
          terminationMessagePolicy: File
          image: "docker.prospecta.com/prospecta/mdo-process:development"
          name: process
          ports:
            - name: spring-port
              containerPort: 8080
              protocol: TCP
            - name: grpc-port
              containerPort: 10000
              protocol: TCP
          resources: {}
      securityContext: {}
      imagePullSecrets:
        - name: nexus-image-pull
---
